--- a/simple/.classpath
+++ b/simple/.classpath
@@ -2,8 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/j3d"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/j3d">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Program Files/Java/Java3D/1.5.2/lib/ext"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jogl"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java3D"/>
 	<classpathentry kind="lib" path="/jrtr/bin"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
